# news-sentiment-analysis

./: README.md  main.py  pyproject.toml
data/: articles.json  sentiment_scores.csv
part1/: playwright_cbc_news.py  requests_cbc_news.py
part2/: transformers_cbc_news.py  transformers_text_summary.py  vader_sentiment_cbc_news.py
