[tool.poetry]
name = "news-sentiment-analysis"
version = "0.1.0"
description = ""
authors = ["Duc Ho <hoduc1202@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.50.0"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.3"
vaderSentiment = "^3.3.2"
transformers = "^4.49.0"
torch = "^2.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
